
CHANGES IN VERSION 1.9.6
------------------------

NEW FEATURES

    o citation('recount')[5] now lists the recount-brain
        bioRxiv pre-print citation information.


CHANGES IN VERSION 1.9.5
------------------------

NEW FEATURES

    o We have now released the FANTOM-CAT/recount2 RSE files
        which you can access now through
        download_study(type = 'rse-fc'). See
        Luidy-Imada E, Sanchez DF, et al, bioRxiv, 2019
        for more information.


CHANGES IN VERSION 1.9.4
------------------------

BUG FIXES

    o I made the example code for geo_characteristics() more robust
        since currently rentrez can occasionally fails.


CHANGES IN VERSION 1.9.3
------------------------

NEW FEATURES

    o Add ORCID's following changes at
        http://bioconductor.org/developers/package-guidelines/#description
        
CHANGES IN VERSION 1.9.2
------------------------

BUG FIXES

    o Added the argument `async` to snaptron_query() which
        can be set to FALSE to address the issue reported
        at https://github.com/ChristopherWilks/snaptron/issues/11


CHANGES IN VERSION 1.7.7
------------------------

BUG FIXES

    o Updated reproduce_ranges() to match the URL change in
        Gencode from
        ftp://ftp.sanger.ac.uk to ftp://ftp.ebi.ac.uk


CHANGES IN VERSION 1.7.5
------------------------

SIGNIFICANT USER-VISIBLE CHANGES

    o add_metadata() can now download the recount_brain_v2 data.


CHANGES IN VERSION 1.7.4
------------------------

BUG FIXES

    o Fix a NOTE about RefManageR.


CHANGES IN VERSION 1.7.3
------------------------

SIGNIFICANT USER-VISIBLE CHANGES

    o Use BiocManager

CHANGES IN VERSION 1.7.2
------------------------

BUG FIXES

    o Fix a unit test.


CHANGES IN VERSION 1.7.1
------------------------

SIGNIFICANT USER-VISIBLE CHANGES

    o rse_tx URLs now point to v2 to reflect recent changes by Fu et al.


CHANGES IN VERSION 1.5.11
-------------------------

BUG FIXES
