@@ -41,7 +41,7 @@
 #'     small delay will be added before each download request to avoid
 #'     request issues.}
 #'     \item{rse-fc}{ Downloads the FANTOM-CAT/recount2 rse file described in
-#'     Luidy-Imada, Sanchez, et al., bioRxiv, 2019.}
+#'     Imada, Sanchez, et al., bioRxiv, 2019.}
 #' }
 #' @param outdir The destination directory for the downloaded file(s).
 #' Alternatively check the \code{SciServer} section on the vignette to see
@@ -67,8 +67,9 @@
 #' Transcript quantifications are described in Fu et al, bioRxiv, 2018.
 #' \url{https://www.biorxiv.org/content/10.1101/247346v2}
 #'
-#' FANTOM-CAT/recount2 quantifications are described in Luidy-Imada,
+#' FANTOM-CAT/recount2 quantifications are described in Imada,
 #' Sanchez, et al., bioRxiv, 2019.
+#' \url{https://www.biorxiv.org/content/10.1101/659490v1}
 #'
 #'
 #' @author Leonardo Collado-Torres
