@@ -24,7 +24,8 @@ NEW FEATURES
     o We have now released the FANTOM-CAT/recount2 RSE files
         which you can access now through
         download_study(type = 'rse-fc'). See
-        Luidy-Imada E, Sanchez DF, et al, bioRxiv, 2019
+        Imada EL, Sanchez DF, et al, bioRxiv, 2019
+        https://www.biorxiv.org/content/10.1101/659490v1
         for more information.
 
 
